# anrbj666-thief

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: 00-manual-git.mdc
config/: private_config.example.toml  shared_config.example.json  shared_config.schema.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  COST_ANALYSIS.md  DECISIONS.md  DEVELOPMENT_STAGES.md  INTEROPERABILITY.md  OPERATIONS.md  PLAN.md  PRD.md  PROMPT_BOOK.md  REQUIREMENTS_CONFLICTS.md  REQUIREMENTS_MATRIX.md  RISK_REGISTER.md  SECURITY.md  TEST_STRATEGY.md  TODO.md
src/anrbj666_thief/: __init__.py
src/anrbj666_thief/config/: __init__.py  checks.py  loader.py  model.py
src/anrbj666_thief/game/: __init__.py  board.py  capture.py  engine.py  geometry.py  rules.py  scoring.py
src/anrbj666_thief/mcp/: __init__.py  __main__.py  client.py  inbox.py  messages.py  server.py
src/anrbj666_thief/strategy/: __init__.py  action.py  base.py  heuristic.py  pathfinding.py  runner.py
tests/: conftest.py  test_board.py  test_capture.py  test_config.py  test_engine.py  test_geometry.py  test_mcp.py  test_messages.py  test_pathfinding.py  test_rules.py  test_scoring.py  test_strategy.py
