[project]
name = "anrbj666-thief"
version = "0.0.0"
description = "Thief peer for the distributed P2P Cops-and-Robbers final project (University of Haifa, 2026)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alon" }, { name = "Renat" }]
dependencies = [
    # Stage 2: mandatory P2P transport (Model Context Protocol via FastMCP).
    "fastmcp>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anrbj666_thief"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TID"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default suite is offline & deterministic: real-network / LLM / Gmail tests are
# opt-in (run e.g. `uv run pytest -m network`).
addopts = "-ra -m 'not network and not llm and not gmail'"
asyncio_mode = "auto"
markers = [
    "integration: cross-process / cross-repo tests (not pure unit)",
    "network: requires a public tunnel or a second machine (manual, off by default)",
    "llm: requires an external or local LLM (off by default)",
    "gmail: exercises Gmail payload building; never sends real email in CI",
]

[tool.coverage.run]
# Runnable entrypoints start a blocking network server and are verified manually
# (docs/OPERATIONS.md), not by the unit suite.
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
